fix some spacing and font-size issues

--- a/css/index.css
+++ b/css/index.css
@@ -51,7 +51,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-size: 1.02rem;
+  font-size: 1.075rem;
   font-family: var(--main-font);
   color: var(--text);
   background-color: var(--white);
@@ -69,9 +69,11 @@ h6 {
 }
 h1 {
   margin-top: 50px;
+  margin-bottom: 25px;
 }
 h2 {
   margin-top: 40px;
+  margin-bottom: 15px;
 }
 h1 + h2 {
   margin-top: 10px;
